fix time picker focus style on mobile

--- a/assets/css/pages/_schedule-a-call.scss
+++ b/assets/css/pages/_schedule-a-call.scss
@@ -114,7 +114,14 @@
             &:hover,
             &:focus {
                 > label {
-                    background-color: $color-primary-light;
+                    @include media-breakpoint-down(md) {
+                        background-color: $color-primary;
+                        color: #fff;
+                    }
+
+                    @include media-breakpoint-up(md) {
+                        background-color: $color-primary-light;
+                    }
                 }
             }
 
